--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a href="/templates/galeria.html">Galeria</a>
         <a href="/templates/tabla.html">Tabla</a>
         <a href="/templates/listas.html">Listas</a>
+        <a href="/templates/formulario.html">Formulario</a>
         <a href="https://www.google.com.ar/index.html" target="_blank">Google</a>
     </header>
     <main>
@@ -32,7 +33,7 @@
         </section>
     </main>
     <footer>
-
+        <p>Página hecha por lucia9bide en GitHub</p>
     </footer>
 </body>
 </html>
