--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--https://color.adobe.com/es/search?q=Summer&t=term-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,12 +15,12 @@
         </div>
         
         <div class="links">
-            <a href="/index.html">Home</a>
-            <a href="/templates/galeria.html">Galeria</a>
-            <a href="/templates/tabla.html">Tabla</a>
-            <a href="/templates/listas.html">Listas</a>
-            <a href="/templates/formulario.html">Formulario</a>
-            <a href="https://www.google.com.ar/index.html" target="_blank">Google</a> 
+            <a class="vinculoHeader" href="/index.html">Home</a>
+            <a class="vinculoHeader" href="/templates/galeria.html">Galeria</a>
+            <a class="vinculoHeader" href="/templates/tabla.html">Tabla</a>
+            <a class="vinculoHeader" href="/templates/listas.html">Listas</a>
+            <a class="vinculoHeader" href="/templates/formulario.html">Formulario</a>
+            <a class="vinculoHeader" href="https://www.google.com.ar/index.html" target="_blank">Google</a> 
         </div>
     </header>
     <main>
@@ -41,7 +42,9 @@
         </section>
     </main>
     <footer>
-        <p>Página hecha por lucia9bide en GitHub</p>
+        <div class="pieDePagina">
+            <p class="textP">Página hecha por lucia9bide en GitHub</p>
+        </div>
     </footer>
 </body>
 </html>
