avances con la practica 1 de css

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     </header>
     <main>
         <section>
+            <div class="tituloDiv">
+              <h1 class="titulo">Titulo</h1>  
+            </div>
             <div>
-                <h1>Titulo</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse omnis delectus laborum nam reprehenderit odit velit a.<br> Accusantium ex repellendus voluptas provident ad cumque labore et libero molestias! Sed, nulla.
+                <p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse omnis delectus laborum nam reprehenderit odit velit a.<br> Accusantium ex repellendus voluptas provident ad cumque labore et libero molestias! Sed, nulla.
                 Laudantium minus blanditiis optio suscipit voluptates! Libero repudiandae inventore accusantium nesciunt ab quaerat odio aspernatur! Sed culpa velit sunt eum omnis eaque minus harum sequi? Tenetur nobis quidem officia explicabo.
                 Minima accusantium repellat consequatur aperiam quasi pariatur earum, nisi ullam ex provident vero sint alias illum culpa repudiandae aliquid non nihil iste, debitis dolore? Odio quo ea maiores ullam et?
                 Odit quasi aperiam consequuntur, sit enim est deserunt dolores tempore unde aut neque quo quae at. Omnis facilis officiis aliquid architecto nesciunt quidem, laudantium deleniti impedit delectus cum, animi fugit?</p>
