--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section>
             <div class="tituloDiv">
-              <h1 class="titulo">Titulo</h1>  
+              <h1 class="titulo">Esto es un titulo</h1>  
             </div>
             <div>
                 <p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse omnis delectus laborum nam reprehenderit odit velit a.<br> Accusantium ex repellendus voluptas provident ad cumque labore et libero molestias! Sed, nulla.
